fix id overflow n img size

--- a/src/app/components/detalle/detalle.component.css
+++ b/src/app/components/detalle/detalle.component.css
@@ -4,3 +4,10 @@
 .list-group {
   width: 175px;
 }
+
+.jugador-img {
+  display: block;
+  width: 100%;
+  height: 500px;
+  background-position: center;
+}
